# RoboMuse-4.0

./: Manual.docx  README.md
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/robomuse/: chapter2_msg1.h
catkin_ws/devel/include/rosserial_arduino/: Adc.h  TestRequest.h  TestResponse.h
catkin_ws/devel/include/rosserial_mbed/: Adc.h  TestRequest.h  TestResponse.h
catkin_ws/devel/include/rosserial_msgs/: Log.h  RequestMessageInfoRequest.h  RequestMessageInfoResponse.h  RequestParamRequest.h  RequestParamResponse.h  RequestServiceInfoRequest.h  RequestServiceInfoResponse.h  TopicInfo.h
catkin_ws/devel/lib/pkgconfig/: robomuse.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_tivac.pc  rosserial_windows.pc  rosserial_xbee.pc  youbot_par_nav.pc
catkin_ws/devel/lib/robomuse/: dist  example3_a  example3_b  example3_c  example3_d  example3_e  example4_a  example4_b  listener  move_group_interface_tutorials  odom  talker  teleop  zeta
catkin_ws/devel/lib/rosserial_server/: serial_node  socket_node
catkin_ws/devel/lib/youbot_par_nav/: move_group_interface_tutorial  newmove_group  send_goal
catkin_ws/devel/share/robomuse/cmake/: robomuse-msg-extras.cmake  robomuse-msg-paths.cmake  robomuseConfig.cmake
catkin_ws/devel/share/rosserial_arduino/cmake/: rosserial_arduino-extras.cmake  rosserial_arduino-msg-paths.cmake  rosserial_arduinoConfig.cmake
catkin_ws/devel/share/rosserial_client/cmake/: rosserial_clientConfig.cmake
catkin_ws/src/robomuse/: CMakeLists.txt  package.xml  ros_controller.urdf.xacro
catkin_ws/src/robomuse/controller/: ros_controller.urdf.xacro
catkin_ws/src/robomuse/launch/: display.launch  driver.launch  find_object_3d.launch  hardstuff.launch  rgbd.launch  robomuse.launch  robomuse_base_only.launch  robomuse_depth_reg.launch  robomuse_move_base.launch  robomuse_nav2d_op.launch  robomuse_rtab.launch  youbot_depth_reg.launch
catkin_ws/src/robomuse/meshes/: base.dae  basenew.dae  basw.dae  chassis.dae  kinect.dae  wheel.dae
catkin_ws/src/robomuse/msg/: chapter2_msg1.msg
catkin_ws/src/robomuse/param/: costmap.yaml  local_costmap.yaml  youbot_nav.rviz  youbot_nav2d.rviz
catkin_ws/src/robomuse/robots/: robomuse_base_only.urdf.xacro
catkin_ws/src/robomuse/src/: baxter_helper.py  dist.cpp  example3_a.cpp  example3_b.cpp  example3_c.cpp  example3_d.cpp  example3_e.cpp  example4_a.cpp  example4_b.cpp  gripper.cpp  gripper.py  listener.cpp  move_group_interface_tutorials.cpp  odom.cpp  talker.cpp  teleop.cpp  zeta.cpp
catkin_ws/src/robomuse/urdf/: youbot_gazebo.urdf.xacro  youbot_properties.urdf.xacro
catkin_ws/src/robomuse/urdf/robomuse_base/: Untitled Document  base.gazebo.xacro  base.transmission.xacro  base.urdf.xacro  combined.urdf.xacro  combined2.urdf.xacro  hi.urdf.xacro  newbase.gazebo.xacro  newbase.urdf.xacro  rack.gazebo.xacro  try.gazebo.xacro  try.urdf.xacro  youbot.gazebo.xacro  youbot.urdf.xacro
catkin_ws/src/robomuse/urdf/robomuse_rack/: newrack.urdf.xacro  rack.gazebo.xacro  rack.sdf  rack.urdf  rack.urdf.xacro
catkin_ws/src/robomuse/urdf/sensors/: kinect.urdf.xacro
catkin_ws/src/rosserial/rosserial_python/nodes/: serial_node.py
catkin_ws/src/youbot_par_nav/: CMakeLists.txt  package.xml
catkin_ws/src/youbot_par_nav/launch/: find_object_3d.launch  youbot.launch  youbot_amcl.launch  youbot_map.launch  youbot_move_base.launch  youbot_rtab.launch  youbot_teleop_keyboard.launch
catkin_ws/src/youbot_par_nav/param/: base_local_planner.yaml  costmap_common.yaml  operator.yaml  youbot_nav.rviz
catkin_ws/src/youbot_par_nav/src/: move_group_interface_tutorial.cpp  newmove_group.cpp  send_goal.cpp
sketchbook/arduino/: arduino.ino
sketchbook/arduino/arduinocalc/: arduinocalc.ino
sketchbook/arduino/checkenc/: checkenc.ino
sketchbook/arduino/driver/sketch_jun03a/: sketch_jun03a.ino
sketchbook/arduino/driver/teleopbest/: teleopbest.ino
sketchbook/arduino/encfinal/: encfinal.ino
sketchbook/arduino/fixeddist/: fixeddist.ino
sketchbook/arduino/fixeddistb/: fixeddistb.ino
sketchbook/arduino/kangroo_testing_2/: kangroo_testing_2.ino
sketchbook/arduino/pubinard/: pubinard.ino
sketchbook/arduino/sketch_jun01a/: sketch_jun01a.ino
sketchbook/arduino/telenew/combined/: combined.ino
sketchbook/arduino/telenew/teleopbest/: teleopbest.ino
sketchbook/arduino/teletele/: teletele.ino
sketchbook/libraries/ros_lib/: ArduinoHardware.h
sketchbook/libraries/ros_lib/brics_actuator/: CartesianPose.h  CartesianTwist.h  CartesianVector.h  CartesianWrench.h  JointAccelerations.h  JointConstraint.h  JointImpedances.h  JointPositions.h  JointTorques.h  JointValue.h  JointVelocities.h  Poison.h
sketchbook/libraries/ros_lib/ethercat_trigger_controllers/: MultiWaveform.h
sketchbook/libraries/ros_lib/find_object_2d/: ObjectsStamped.h
sketchbook/libraries/ros_lib/nav2d_msgs/: LocalizedScan.h  RobotPose.h
sketchbook/libraries/ros_lib/nav2d_navigator/: ExploreAction.h  ExploreActionFeedback.h  ExploreActionGoal.h  ExploreActionResult.h  ExploreFeedback.h  ExploreResult.h  GetFirstMapAction.h  GetFirstMapActionFeedback.h  GetFirstMapActionGoal.h  GetFirstMapActionResult.h  LocalizeAction.h  LocalizeActionFeedback.h  LocalizeActionGoal.h  LocalizeActionResult.h  LocalizeGoal.h  MoveToPosition2DAction.h  MoveToPosition2DActionFeedback.h  MoveToPosition2DActionGoal.h  MoveToPosition2DActionResult.h  MoveToPosition2DFeedback.h  MoveToPosition2DGoal.h  MoveToPosition2DResult.h  SendCommand.h
sketchbook/libraries/ros_lib/nav2d_operator/: cmd.h
sketchbook/libraries/ros_lib/p2os_msgs/: AIO.h  SonarArray.h
sketchbook/libraries/ros_lib/pr2_mechanism_controllers/: BaseControllerState.h  BaseControllerState2.h  BaseOdometryState.h  DebugInfo.h  OdometryMatrix.h
sketchbook/libraries/ros_lib/pr2_msgs/: AccelerometerState.h  BatteryServer.h  BatteryServer2.h  BatteryState.h  BatteryState2.h  LaserTrajCmd.h  PowerBoardState.h  PressureState.h
sketchbook/libraries/ros_lib/robomuse/: chapter2_msg1.h
(+21 files in other folders)
